--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 						<span class="title text-uppercase">Trade Efficiently, Trade with PLX Trading Private Ltd.</span>
 						<h1 class="">PLX Trading Private Limited <br> Bridging Markets, Building Success</h1>
 						<div class="btn-holder">
-							<a href="#" class="btn active text-center text-uppercase">Our Service</a>
-							<a href="#" class="btn text-center text-uppercase">Get a quote</a>
+							<a href="#service" class="btn active text-center text-uppercase">Our Service</a>
+							<a href="#contact" class="btn text-center text-uppercase">Get a quote</a>
 						</div>
 					</div>
 				</div>
