--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
 									Leveraging our vast global network of contacts and suppliers, we drive strategic sourcing initiatives customized to meet our clients' unique needs. Our seasoned team oversees the entire procurement process, from supplier selection to contract negotiation, ensuring smooth transactions and delivering exceptional value.
 
 									Partner with PLX Trading Private Limited today and empower your business to achieve better pricing, optimize supplier relationships, and streamline your procurement processes for lasting success.</p>
-								<a href="project1.html" class="btn active text-center text-uppercase">Our project</a>
+								<a href="#" class="btn active text-center text-uppercase">Our project</a>
 							</div>
 						</div>
-						<div class="col-xs-12 col-sm-5">
+						<div class="col-xs-12 col-sm-5 about-img">
 							<div class="img-holder">
 								<img src="images/ship.png" alt="image description" class="img-responsive">
 							</div>
