--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 				</div>
 				<!-- col of the page -->
 				<div class="col overlay">
-					<div class="">
+					<div class="mt-10">
 						<img src="images/bangladesh.jpg" class="w-50 mx-auto d-flex round-circle" alt="Bangladesh">
 						<h3 class="text-uppercase text-center">Bangladesh</h3>
 					</div>
@@ -320,7 +320,7 @@
 				</div>
 				<!-- col of the page -->
 				<div class="col overlay">
-					<div class="">
+					<div class="mt-10">
 						<img src="images/singapore.jpg" class="w-50 mx-auto d-flex round-circle" alt="Bangladesh">
 						<h3 class="text-uppercase text-center">Singapore</h3>
 					</div>
@@ -333,7 +333,7 @@
 				</div>
 				<!-- col of the page -->
 				<div class="col overlay">
-					<div class="">
+					<div class="mt-10">
 						<img src="images/thailand.jpg" class="w-50 mx-auto d-flex round-circle" alt="Bangladesh">
 						<h3 class="text-uppercase text-center">Thailand</h3>
 					</div>
@@ -346,7 +346,7 @@
 				</div>
 				<!-- col of the page -->
 				<div class="col overlay">
-					<div class="">
+					<div class="mt-10">
 						<img src="images/gemany.jpg" class="w-50 mx-auto d-flex round-circle" alt="Bangladesh">
 						<h3 class="text-uppercase text-center">Germany</h3>
 					</div>
