--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<!-- contact list of the page -->
-							<ul class="contact-list list-unstyled">
+							<ul class="contact-list list-unstyled contact-list-top">
 								<li><i class="icon icon_phone"></i> <a href="tel:+8809678387332">+88 09678 387332</a></li>
 								<li><i class="icon icon_mail"></i> <a href="mailto:tusher@plxgroup.biz">tusher@plxgroup.biz</a></li>
 							</ul>
 							<!-- socail network of the page -->
-							<ul class="socail-network list-unstyled">
+							<ul class="socail-network list-unstyled socail-network-top">
 								<li><a href="#" class="social_facebook"></a></li>
 								<li><a href="#" class="social_linkedin"></a></li>
 								<li><a href="#" class="social_twitter"></a></li>
